<resources>
    <string name="app_name">LightArchitecture</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="edit">编辑</string>
    <string name="note">笔记</string>
    <string name="new_note">新建笔记</string>
    <string name="saved">已保存</string>
    <string name="top">置顶</string>
    <string name="last_time_modify">最后编辑于</string>
    <string name="copyright">Product by LingChenJie with love</string>

    <string name="common_loading">加载中&#8230;</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="mvi">MVI</string>
    <string name="common">Common</string>
    <string name="navigation">Navigation</string>
    <string name="transaction">Transaction</string>
    <string name="paging">Paging</string>
    <string name="nested">Nested</string>
    <string name="test">Test</string>

    <!-- Common相关 -->
    <string name="common_nav_index">首页</string>
    <string name="common_nav_found">发现</string>
    <string name="common_nav_message">消息</string>
    <string name="common_nav_me">我的</string>
    <string name="common_no_more_data">没有更多数据了</string>
    <string name="common_web_ssl_error_title">当前网站安全证书已过期或不可信\n是否继续浏览</string>

    <string name="common_web_ssl_error_allow">继续浏览</string>
    <string name="common_web_ssl_error_reject">返回上一页</string>
    <string name="common_web_call_phone_title">当前号码 %s</string>
    <string name="common_web_call_phone_allow">拨打</string>
    <string name="common_web_call_phone_reject">取消</string>
    <string name="common_web_location_permission_title">当前网站需要获取您的地理位置</string>
    <string name="common_web_location_permission_allow">授予</string>
    <string name="common_web_location_permission_reject">拒绝</string>

    <!-- 权限相关 -->
    <string name="common_permission_alert">授权提醒</string>
    <string name="common_permission_fail_1">授权失败，请正确授予权限</string>
    <string name="common_permission_fail_2">获取权限失败，请手动授予权限</string>
    <string name="common_permission_fail_3">获取权限失败，请手动授予%s</string>
    <string name="common_permission_fail_4">没有授予后台定位权限，请您选择"始终允许"</string>
    <string name="common_permission_goto">前往授权</string>

    <string name="common_permission_calendar">日历权限</string>
    <string name="common_permission_camera">相机权限</string>
    <string name="common_permission_contacts">通讯录权限</string>
    <string name="common_permission_location">定位权限</string>
    <string name="common_permission_location_background">后台定位权限</string>
    <string name="common_permission_microphone">麦克风权限</string>
    <string name="common_permission_phone">电话权限</string>
    <string name="common_permission_call_log">通话记录权限</string>
    <string name="common_permission_sensors">身体传感器权限</string>
    <string name="common_permission_activity_recognition">健身运动权限</string>
    <string name="common_permission_sms">短信权限</string>
    <string name="common_permission_storage">存储权限</string>

    <string name="common_permission_install">安装应用权限</string>
    <string name="common_permission_notification">通知栏权限</string>
    <string name="common_permission_window">悬浮窗权限</string>
    <string name="common_permission_setting">系统设置权限</string>

    <!-- 状态布局 -->
    <string name="status_layout_no_data">空空如也</string>
    <string name="status_layout_error_request">请求出错，请重试</string>
    <string name="status_layout_error_network">网络错误，请重试</string>
    <string name="status_layout_retry">重试</string>

    <!-- 浏览器 -->
    <string name="web_title">网页加载中&#8230;</string>

</resources>