<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:background="@color/white"
        android:elevation="@dimen/dp_4"
        android:paddingTop="@dimen/dp_4">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_36"
            android:layout_height="@dimen/dp_56"
            android:layout_marginStart="@dimen/dp_12"
            android:scaleType="centerInside"
            android:src="@drawable/ic_baseline_arrow_back"
            android:tint="@color/dark_gray" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_32"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_4"
                android:text="@string/edit"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/sp_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_20"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_4"
                android:text="@string/new_note"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/sp_14" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:background="@color/white"
        android:hint="@string/title"
        android:paddingStart="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_12"
        android:singleLine="true"
        android:textSize="@dimen/sp_24" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/content"
        android:padding="@dimen/dp_12"
        android:paddingStart="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_12"
        android:textSize="@dimen/sp_16" />

</LinearLayout>