<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.android.architecture.ui.widget.layout.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@color/theme_color"
        app:title_text="@string/app_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/layout_mvi"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_112"
                    android:layout_weight="1"
                    android:elevation="@dimen/dp_4"
                    app:cardBackgroundColor="#66CC33"
                    app:cardCornerRadius="@dimen/dp_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/mvi"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/layout_common"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_112"
                    android:layout_marginStart="@dimen/dp_6"
                    android:layout_weight="1"
                    android:elevation="@dimen/dp_4"
                    app:cardBackgroundColor="#3399FF"
                    app:cardCornerRadius="@dimen/dp_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/common"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/layout_navigation"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_112"
                    android:layout_weight="1"
                    android:elevation="@dimen/dp_4"
                    app:cardBackgroundColor="#FFC107"
                    app:cardCornerRadius="@dimen/dp_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/navigation"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/layout_transaction"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_112"
                    android:layout_marginStart="@dimen/dp_6"
                    android:layout_weight="1"
                    android:elevation="@dimen/dp_4"
                    app:cardBackgroundColor="#8BC34A"
                    app:cardCornerRadius="@dimen/dp_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/transaction"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/layout_paging"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_112"
                    android:layout_weight="1"
                    android:elevation="@dimen/dp_4"
                    app:cardBackgroundColor="#00BCD4"
                    app:cardCornerRadius="@dimen/dp_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/paging"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/layout_test"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_112"
                    android:layout_marginStart="@dimen/dp_6"
                    android:layout_weight="1"
                    android:elevation="@dimen/dp_4"
                    app:cardBackgroundColor="#4CAF50"
                    app:cardCornerRadius="@dimen/dp_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/test"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>